--- a/src/components/WebsiteCart/webistecart.styles.css
+++ b/src/components/WebsiteCart/webistecart.styles.css
@@ -1,13 +1,13 @@
-.nbr {
-  background: lightblue;
-  position: fixed;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-  cursor: url('https://uploads.codesandbox.io/uploads/user/b3e56831-8b98-4fee-b941-0e27f39883ab/Ad1_-cursor.png') 39 39, auto;
-}
+.div {
+    background: lightblue;
+    position: fixed;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    cursor: url('https://uploads.codesandbox.io/uploads/user/b3e56831-8b98-4fee-b941-0e27f39883ab/Ad1_-cursor.png') 39 39, auto;
+  }
 
-.nbr > div {
+.my {
   position: absolute;
   width: 100vw;
   height: 100vh;
@@ -17,12 +17,12 @@
   justify-content: center;
 }
 
-#rootmy > div > div {
+.div2 {
   background-color: white;
   background-size: auto 85%;
   background-repeat: no-repeat;
   background-position: center center;
-  width: 45vh;
+  width: 45vw;
   max-width: 300px;
   height: 85vh;
   max-height: 570px;
